# TM-TRANSPORTADORA-BACK

./: .commitmsg.tmp  .gitignore  DEPLOY-INTEGRACAO.md  FRONTEND-PEDAGIOS.md  render.yaml
backend/: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  index.py  pyproject.toml  railway.api.json  railway.json  railway.worker.json  requirements.txt  vercel.json
backend/alembic/: env.py
backend/alembic/versions/: 001_add_multi_tenancy.py  20260522_002535_initial_schema.py  20260523_010000_freight_notifications.py  20260523_020000_fuel_refills.py  20260612_030000_toll_charges.py  20260616_merge_heads.py  20260617_driver_fk_set_null.py  20260619_driver_commission_pct.py  20260621_truck_implements.py  20260622_driver_documents.py  20260623_backend_features.py
backend/app/: main.py
backend/app/core/: rate_limit.py
backend/app/core/config/: settings.py
backend/app/core/database/: engine.py  redis.py  session.py
backend/app/core/logging/: structlog_config.py
backend/app/core/security/: jwt.py  password.py
backend/app/modules/auth/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/clients/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/dashboard/: router.py  (+2 more)
backend/app/shared/: base_model.py  base_repository.py
backend/app/workers/: celery_app.py  tasks.py
backend/docker/: Dockerfile  Dockerfile.worker  nginx.conf
backend/docs/: API-FRONTEND.md
backend/scripts/: dev.ps1  docker-dev.ps1  install-deps.ps1  render_provision.py  reset_admin_password.py  seed.py  setup-docker.ps1  start.sh
backend/tests/: conftest.py  test_service_coverage.py  test_shared.py
backend/tests/auth/: test_auth_router.py
backend/tests/clients/: test_clients_router.py
backend/tests/dashboard/: test_dashboard.py
backend/tests/drivers/: test_drivers_router.py
backend/tests/finance/: test_commission_sync.py  test_finance_router.py  test_fixed_expenses_router.py
backend/tests/freights/: test_freight_stops.py  test_freights_router.py
backend/tests/fuel/: test_fuel_router.py
backend/tests/maintenance/: test_maintenance_router.py
backend/tests/notifications/: test_notifications_router.py
backend/tests/security/: test_authorization.py
backend/tests/tracking/: test_tracking_router.py
backend/tests/trucks/: test_trucks_router.py
backend/tests/users/: test_users_router.py
(+79 files in other folders)
